; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.synaptics_i2c = type { i32 }

@polling_req = common dso_local global i64 0, align 8
@NO_DATA_SLEEP_MSECS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_dev*)* @synaptics_i2c_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synaptics_i2c_open(%struct.input_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.input_dev*, align 8
  %4 = alloca %struct.synaptics_i2c*, align 8
  %5 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %3, align 8
  %6 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %7 = call %struct.synaptics_i2c* @input_get_drvdata(%struct.input_dev* %6)
  store %struct.synaptics_i2c* %7, %struct.synaptics_i2c** %4, align 8
  %8 = load %struct.synaptics_i2c*, %struct.synaptics_i2c** %4, align 8
  %9 = getelementptr inbounds %struct.synaptics_i2c, %struct.synaptics_i2c* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @synaptics_i2c_reset_config(i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %2, align 4
  br label %25

16:                                               ; preds = %1
  %17 = load i64, i64* @polling_req, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load %struct.synaptics_i2c*, %struct.synaptics_i2c** %4, align 8
  %21 = load i32, i32* @NO_DATA_SLEEP_MSECS, align 4
  %22 = call i32 @msecs_to_jiffies(i32 %21)
  %23 = call i32 @synaptics_i2c_reschedule_work(%struct.synaptics_i2c* %20, i32 %22)
  br label %24

24:                                               ; preds = %19, %16
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %14
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local %struct.synaptics_i2c* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @synaptics_i2c_reset_config(i32) #1

declare dso_local i32 @synaptics_i2c_reschedule_work(%struct.synaptics_i2c*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
